--- a/src/components/elements/header/header.css
+++ b/src/components/elements/header/header.css
@@ -1,27 +1,29 @@
-.header-info {
+.flex-container {
+    padding: 0;
     margin: 0;
-    list-style-type: none;
+    list-style: none;
     display: flex;
-    flex-direction:row;
-    justify-content: center;
+    background-color:#3C3C3C;
+}
+
+.center { 
+    justify-content: center; 
+} 
+
+.flex-item {
+    padding: 5px;
+    width: 80px;
+    height: 50px;
+    margin: 5px;
+    line-height: 40px;
     color: white;
-    padding: 20px;
-    background: #3C3C3C;
-    font-family:sans-serif;            
+    font-family:sans-serif; 
+    font-size: 1.2em;
+    text-align: center;
 }
 
-.header-info li {
-    margin-right: 5%;
-}
-
-.header:hover {
+.flex-item:hover {
     color: #11ABB0;
     font-size: 15px;
     cursor: pointer;
-}
-
-.sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
 }
